Scrollable table, Fixed Overlapping Issues, Added Seach Functionality, Altered positions of some objects, linked every css and html files with django project

--- a/inventory/static/inventory/css/component.css
+++ b/inventory/static/inventory/css/component.css
@@ -12,6 +12,7 @@
 		font-family: 'ecoicons';
 		src: url("../fonts/ecoicons/ecoicons.eot");
 		src: url("../fonts/ecoicons/ecoicons.eot?#iefix") format("embedded-opentype"), url("../fonts/ecoicons/ecoicons.woff") format("woff"), url("../fonts/ecoicons/ecoicons.ttf") format("truetype"), url("../fonts/ecoicons/ecoicons.svg#ecoicons") format("svg");
+
 }
 
 /* Icomoon.com */
@@ -240,4 +241,54 @@
 	}
 .hoverZoom:hover {
 	transform: scale(1.2)
+}
+
+
+
+/* Style the search field */
+form.example input[type=text] {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 80%;
+  background: #f1f1f1;
+}
+
+/* Style the submit button */
+form.example button {
+  float: left;
+  width: 20%;
+  padding: 10px;
+  background: #2196F3;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none; /* Prevent double borders */
+  cursor: pointer;
+}
+
+form.example button:hover {
+  background: #0b7dda;
+}
+
+/* Clear floats */
+form.example::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+  width: 30%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.table-wrapper-scroll-y {
+display: block;
+max-height: 650px;
+overflow-y: auto;
+-ms-overflow-style: -ms-autohiding-scrollbar;
 }
